# playlist

./: .gitignore  CHANGELOG.md  MANIFEST  README.md  README.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: functions.sh  workflow.yml
playlist/: Playlist.py  pip-selfcheck.json  playlist.bat
src/playlist/: Playlist.py  __init__.py  makeplay.bat  play2.bat  playlist.bat  tryplay.bat
tests/: test_main.py
