[metadata]
name = playlist
version = 0.0.1
author = Paul D.Smith
author_email = paul_d_smith@hotmail.com
description = Randomized MP3 playlist generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/papadeltasierra/playlist
project_urls =
    Bug Tracker = https://github.com/papadeltasierra/playlist
classifiers =
    Programming Language :: Python :: 3,
    Development Status :: 1 - Development

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    eyeD3

[options.packages.find]
where = src